修改退出逻辑

--- a/sys_settings.yaml
+++ b/sys_settings.yaml
@@ -3,4 +3,4 @@ passwordID: 'uid-labeled-text-field-1-wb-id-field'
 assignment_btn: '_qm98q6h'
 next_btn: '//*[@id="assignments-container"]/div[2]/button[2]'
 end_btn: '_1161iwl'
-exit_btn: '_eqjto6h'
+exit_btn: '_xrgghrk'
